--- a/source/includes/_getting-started.md.erb
+++ b/source/includes/_getting-started.md.erb
@@ -53,7 +53,7 @@ To authenticate bills with your users, you may use the following flow.
 ### Payments
 
 1. Provide your user with a "link payment" view to choose a payment method.
-2. Link this payment method to Unbill using the `/payment/add` endpoint.
+2. Link this payment method to Unbill using the `/payment` endpoint.
 3. By default, bills will be paid automatically by using the payment method on file.
-4. To change this, you must make a request to the `/payment/autopay` endpoint to disable autopay.
-5. When autopay is disabled, in order to make a payment, one must be scheduled via the `/payment/make` endpoint.
+4. To change this, you must make a request to the `/payment/settings` endpoint to disable recurring payments.
+5. When recurring payments are disabled, in order to make an on-demand payment, one must be scheduled via the `/payment/schedule` endpoint.
