--- a/source/includes/api/auth/_remove.md.erb
+++ b/source/includes/api/auth/_remove.md.erb
@@ -1,4 +1,4 @@
-## Remove auth
+## Delete auth
 
 > Sample Request
 
@@ -9,11 +9,11 @@
 }
 ```
 
-Removes an `auth` and all its `items` from the account.
+Deletes an `auth` and all its `items` from the account.
 
 ### HTTP Request
 
-`POST <%= config.host %>/auth/remove`
+`POST <%= config.host %>/auth/delete`
 
 ### Post Parameters
 
@@ -31,4 +31,4 @@ Param | Description
 
 ### Returns
 
-Returns a `200` response if the `auth` and its `items` was successfully removed.
+Returns a `200` response if the `auth` and its `items` was successfully deleted.
