--- a/source/includes/api/bill/_list.md.erb
+++ b/source/includes/api/bill/_list.md.erb
@@ -14,59 +14,58 @@
 ```json
 [
   {
-    "_id": "579b695decfa11012711875d",
-    "status": {
-      "type": "syncing"
+    "bill": {
+      "_id": "579b695decfa11012711875d",
+      "balance": "100",
+      "dueDate": "<%= config.futureDate %>",
+      "payDate": "<%= config.futureDate %>",
+      "status": {
+        "type": "upcoming"
+      }, 
+      "settings": {
+        "recurring": "enabled",
+        "schedule": "on-due-date"
+      },
+      "company": {
+        "_id": "579b695decea110719b1874d",
+        "name": "<%= config.billerName %>",
+        "logo": {
+          "url": "<%= config.billerLogo %>",
+          "background": false
+        },
+        "schedule": "on-due-date"
+      }
     },
-    "settings": {
-      "autopay": true 
-    },
-    "company": {
-      "_id": "579b695decea110719b1874d",
-      "name": "Time Warner Cable",
-      "logo": {
-        "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/4c805851c738c006546b234e3c3c793d.png",
-        "background": false
-      } 
-    }
-  }, 
+    "payments": []
+  },
   {
-    "_id": "579b695decfa11012711875d",
-    "balance": "100",
-    "dueDate": "<%= config.futureDate %>",
-    "status": {
-      "type": "upcoming"
+    "bill": {
+      "_id": "579b695decfa11012711875d",
+      "status": {
+        "type": "paid"
+      },
+      "lastPaidAmount": "100",
+      "lastPaidOn": "2016-01-01T00:00:00.000Z",
+      "settings": {
+        "recurring": "enabled",
+        "schedule": "day-before"
+      },
+      "company": {
+        "_id": "579b695decea110719b1874d",
+        "name": "<%= config.billerName %>",
+        "logo": {
+          "url": "<%= config.billerLogo %>",
+          "background": false
+        }
+      }
     },
-    "settings": {
-      "autopay": true 
-    },
-    "company": {
-      "_id": "579b695decea110719b1874d",
-      "name": "The Grove at Auburn",
-      "logo": {
-        "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/0e9a971a96646da46f5faa68862d0f2d.jpg",
-        "background": true
-      } 
-    }
-  }, 
-  {
-    "_id": "579b695decfa11012711875d",
-    "lastPaidAmount": "25",
-    "lastPaidOn": "2016-03-25T00:00:00.000Z",
-    "status": {
-      "type": "paid"
-    },
-    "settings": {
-      "autopay": true 
-    },
-    "company": {
-      "_id": "579b695decea110719b1874d",
-      "name": "Netflix",
-      "logo": {
-        "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/7242937ba29042cce61a8e4745269fce.png",
-        "background": false
-      } 
-    }
+    "payments": [{
+      "amount": "123.12",
+      "paidOn": "2016-01-01T00:00:00.000Z"
+    },{
+      "amount": "153.19",
+      "paidOn": "2016-01-02T00:00:00.000Z"
+    }]
   }
 ]
 ```
@@ -96,4 +95,4 @@ Param | Description
 
 ### Returns
 
-Returns a list of bill objects.
+Returns a list of bill details.
