--- a/source/includes/api/payment/_list.md.erb
+++ b/source/includes/api/payment/_list.md.erb
@@ -16,24 +16,26 @@
   {
     "_id": "580e3754dec21e861b5a3718",
     "type": "card",
+    "status": "verified",
+    "default": true,
+    "name": "Sean Hill",
     "card": {
       "number": "XXXX4242",
       "brand": "visa",
       "type": "credit",
       "expDate": "2016-12-01T12:00:00.000Z"
-    },
-    "status": "verified",
-    "default": true
+    }
   },
   {
     "_id": "580e3e11dec21e861b5a3719",
     "type": "bank",
+    "status": "declined",
+    "name": "Sean Hill",
     "bank": {
       "routing": "XXXX2531",
       "account": "XXXX4124",
       "type": "checking"
-    },
-    "status": "declined"
+    }
   }
 ]
 ```
