--- a/source/index.html.md.erb
+++ b/source/index.html.md.erb
@@ -18,6 +18,7 @@ includes:
   - api/bill/index
   - api/bill/object
   - api/bill/status
+  - api/bill/schedule
   - api/bill/details
   - api/bill/list
   - api/company/index
@@ -33,12 +34,12 @@ includes:
   - api/payment/status
   - api/payment/add
   - api/payment/list
-  - api/payment/remove
+  - api/payment/delete
   - api/payment/retry
   - api/payment/set-default
   - api/payment/assign
-  - api/payment/autopay
-  - api/payment/make
+  - api/payment/settings
+  - api/payment/schedule
   - api/client/index
   - api/client/create
   - api/client/create-token
