Fix getting started response

--- a/source/includes/_getting-started.md.erb
+++ b/source/includes/_getting-started.md.erb
@@ -24,10 +24,12 @@
 
 ```json
 {
-  "bill": {
+  "authId": "56e1dbb5443b10a3bd403fcf",
+  "items": [{
+    "type": "bill",
     "balance": "100",
-    "dueDate": "2016-08-03T00:00:00.000Z"
-  }
+    "dueDate": "<%= config.futureDate %>"
+  }]
 }
 ```
 
