Point to api@unbill.us for access

--- a/source/includes/_introduction.md.erb
+++ b/source/includes/_introduction.md.erb
@@ -29,4 +29,4 @@ The Unbill API uses standard HTTP [verbs](http://www.w3.org/Protocols/rfc2616/rf
 
 ## Gaining Access
 
-To gain access to the Unbill API, please [fill out this form](https://unbill.typeform.com/to/oEBbt1). After our review process is complete, you'll be provided with an `apiKey` which you can use for your requests.
+To gain access to the Unbill API, please [contact us](mailto:api@unbill.us). After our review process is complete, you'll be provided with an `apiKey` which you can use for your requests.
