Show ID's in items. Require an identifier for API.

--- a/source/includes/api/client/_create.md.erb
+++ b/source/includes/api/client/_create.md.erb
@@ -4,7 +4,8 @@
 
 ```json
 {
-  "apiKey": "<%= config.auth %>"
+  "apiKey": "<%= config.auth %>",
+  "identifier": "unique-user-id"
 }
 ```
 
@@ -27,3 +28,4 @@ Creates a client to be used with requests.
 Attribute | Description
 --------- | -----------
 `clientId` | The ID to be used with requests.
+`identifier` | A unique identifier that represents a user in your system.
