--- a/source/includes/api/auth/_list.md.erb
+++ b/source/includes/api/auth/_list.md.erb
@@ -12,36 +12,38 @@
 > 200 Response
 
 ```json
-[
-  {
-    "_id": "579b695decfa11012711875d",
-    "status": {
-      "type": "verified"
-    },
-    "company": {
-      "_id": "579b695decea110719b1874d",
-      "name": "Time Warner Cable",
-      "logo": {
-        "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/4c805851c738c006546b234e3c3c793d.png",
-        "background": false
-      } 
+{
+  "data": [
+    {
+      "_id": "579b695decfa11012711875d",
+      "status": {
+        "type": "verified"
+      },
+      "company": {
+        "_id": "579b695decea110719b1874d",
+        "name": "Time Warner Cable",
+        "logo": {
+          "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/4c805851c738c006546b234e3c3c793d.png",
+          "background": false
+        } 
+      }
+    }, 
+    {
+      "_id": "579b695decfa11012711875d",
+      "status": {
+        "type": "authenticate"
+      },
+      "company": {
+        "_id": "579b695decea110719b1874d",
+        "name": "The Grove at Auburn",
+        "logo": {
+          "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/0e9a971a96646da46f5faa68862d0f2d.jpg",
+          "background": true
+        } 
+      }
     }
-  }, 
-  {
-    "_id": "579b695decfa11012711875d",
-    "status": {
-      "type": "authenticate"
-    },
-    "company": {
-      "_id": "579b695decea110719b1874d",
-      "name": "The Grove at Auburn",
-      "logo": {
-        "url": "https://s3-us-west-2.amazonaws.com/cdn.unbill.com/uploads/utility-provider-logos/0e9a971a96646da46f5faa68862d0f2d.jpg",
-        "background": true
-      } 
-    }
-  }
-]
+  ]
+}
 ```
 
 > 400 Response
@@ -67,4 +69,4 @@ Param | Description
 
 ### Returns
 
-Returns a list of auth objects.
+A dictionary with a `data` property that contains an array of auth objects.
